add simple plugin to project

--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -29,3 +29,14 @@ dependencies {
 
 // tag::wrapper[]
 // end::wrapper[]
+
+
+apply plugin: GreetingPlugin
+
+class GreetingPlugin implements Plugin<Project> {
+    void apply(Project project) {
+        project.task('hello') << {
+            println "Hello from the GreetingPlugin"
+        }
+    }
+}
